Fixed a z-index issue on iOS. Hopefully...

--- a/assets/js/Components/PGCR_Splash/style.css
+++ b/assets/js/Components/PGCR_Splash/style.css
@@ -41,7 +41,6 @@
     top: 0;
     bottom: 0;
     width: 100%;
-    z-index: -1;
     /* filter: blur(3px); */
     background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.6)) repeat scroll 0% 0%, rgba(0, 0, 0, 0) var(--bgImage) no-repeat scroll 0px 0px / cover;
 }
@@ -61,6 +60,8 @@
         /* border: 1px solid red; */
         display: grid;
         grid-template-columns: 1fr 3fr;
+        position: relative;
+        z-index: 0;
     }
     .container-left{
         display: flex;
@@ -127,6 +128,8 @@
     }
     .container-right{
         height: 100%;
+        position: relative;
+        z-index: 1;
     }
     .team-icon-wrap{
         position: relative;
